[package]
name = "tikv-fuzz"
version = "0.0.0"
authors = ["you06 <you1474600@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-preview = { version = "0.3.0-alpha.18", features = ["compat", "async-await", "nightly"] }
tikv-client = { git = "https://github.com/tikv/client-rust.git" }
clap = "2.32"
